saas/k8s/003-data/4000-presto/50-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: presto
  namespace: data
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: presto.data.davar.com
      http:
        paths:
          - backend:
              serviceName: presto-data
              servicePort: 80
            path: /
  tls:
    - hosts:
        - presto.data.davar.com
      secretName: presto-production-tls
